--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
             <iframe class="m-0"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d395590.07926256274!2d-71.5782879189662!3d-41.18764046843717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x961a7b72dbb708e1%3A0xd91b7e92f820aa94!2sCentro%20C%C3%ADvico%20Bariloche!5e0!3m2!1ses!2sad!4v1621182650420!5m2!1ses!2sad"
               width="160" height="150" style="border:solid 1px slategrey; margin: 10px;" allowfullscreen=""
-              loading="lazy"></iframe>
+              loading="lazy">
+            </iframe>
           </div>
 
 
